syntax = "proto3";

option csharp_namespace = "TrueCode.CurrencyService.Api";

package currency;

service Currency {
	rpc GetFavoritesRate (UserRequest) returns (CurrencyRateResponse);
	rpc AddFavorite (AddFavoriteRequest) returns (CurrencyRateResponse);
}

message UserRequest {
	string id = 1;
}

message AddFavoriteRequest {
	string userId = 1;
	int32 currencyId = 2;
}

message CurrencyRateResponse {
	repeated CurrencyRate rates = 1;
}

message CurrencyRate {
	string name = 1;
	string rate = 2;
}